# pretty-genetic-algorithm

./: .gitignore  README.md  generate_docs.sh  pyproject.toml  pytest.ini  setup.cfg  upload.sh
docs/: index.html
docs-src/1-Introduction/: content.md
src/pretty_genetic_algorithm/: Creature.py  PrettyGeneticAlgorithm.py  __init__.py
src/pretty_genetic_algorithm/parameter/: BaseParameter.py  BoolParameter.py  RangeParameter.py  __init__.py
tests/: fixtures.py  test_creature.py  test_genetic_algorithm.py  test_parameters.py
