[tool.poetry]
name = "pretty_genetic_algorithm"
version = "0.0.2"
description = "A genetic algorithm implementation with pretty progress updates"
authors = ["eniallator"]
license = "MIT License"

[tool.poetry.dependencies]
python = "^3.7.5"
tqdm = "^4.63.0"

[tool.poetry.dev-dependencies]
black = "^22.1.0"
pytest = "^7.1.1"

[build-system]
requires = ["poetry-core>=1.0.0a5"]
build-backend = "poetry.core.masonry.api"
