[metadata]
name = pretty-genetic-algorithm
version = 0.0.4.2
author = eniallator
description = A genetic algorithm implementation with pretty progress updates
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/eniallator/pretty-genetic-algorithm
project_urls =
    Bug Tracker = https://github.com/eniallator/pretty-genetic-algorithm/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8

[options.packages.find]
where = src